tests/ui/rfcs/rfc-2632-const-trait-impl/tilde-const-and-const-params.stderr
error: `~const` is not allowed here
  --> $DIR/tilde-const-and-const-params.rs:26:11
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |           ^^^^^^^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/tilde-const-and-const-params.rs:26:4
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |    ^^^

error[E0308]: mismatched types
  --> $DIR/tilde-const-and-const-params.rs:26:61
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |                                                             ^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`

error[E0308]: mismatched types
  --> $DIR/tilde-const-and-const-params.rs:9:44
   |
LL |     fn add<A: ~const Add42>(self) -> Foo<{ A::add(N) }> {
   |                                            ^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
